# gil

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  TASKS.md  check_import.py  delete_dirs.py  move_yaml_parser.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-pages.yml  docker-publish.yml  gil-node-data-publish.yml  gil-node-openai-publish.yml  gil-node-text-publish.yml  gil-py-publish.yml  pypi-publish.yml  release.yml
docs/: 404.html  ARCHITECTURE.md  CONTEXT_SYSTEM.md  DEV.md  NODE_SPEC.md  OVERVIEW.md  YAML_SPEC.md  docs.html  docs.txt  index.html  index.txt
docs-content/: ARCHITECTURE.md  OVERVIEW.md
docs-content/nodes/: TransformData.md
docs/_next/static/chunks/: 1684-7a66dc04a5d9e37f.js  1707.544ae51f54810e26.js  4669.f0c1b0c330e56792.js  641.d4ab1c704baf9a08.js  cb15b0f3-2afaac53bf45f539.js  main-c038b44119969f01.js  webpack-3191fbf44648f190.js
docs/_next/static/css/: 243801450fb246ae.css  88dadc3596b93c7c.css  ec6ab958af97b9c3.css
docs/docs/: ARCHITECTURE.html  ARCHITECTURE.txt  CONTEXT_SYSTEM.html  CONTEXT_SYSTEM.txt  DEV.html  DEV.txt  NODE_SPEC.html  NODE_SPEC.txt  OVERVIEW.html  OVERVIEW.txt  YAML_SPEC.html  YAML_SPEC.txt
docs/docs/nodes/: AITextGeneration.html  AITextGeneration.txt  ControlBranch.html  ControlBranch.txt  DataReadFile.html  DataReadFile.txt  GilConnectorOpenAI.html  GilConnectorOpenAI.txt  GilGenImage.html  GilGenImage.txt  README.html  README.txt  TransformData.html  TransformData.txt  UtilLogMessage.html  UtilLogMessage.txt  UtilSetVariable.html  UtilSetVariable.txt
docs/nodes/: AITextGeneration.md  CommAPI.md  ControlBranch.md  ControlCondition.md  DataFile.md  DataReadFile.md  GilConnectorOpenAI.md  GilGenImage.md  README.md  TransformData.md  UtilLogMessage.md  UtilSetVariable.md
gil-flow-py/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
gil-flow-py/charts/gil-flow-py/: Chart.yaml  values.yaml
gil-flow-py/charts/gil-flow-py/templates/: _helpers.tpl
gil-flow-py/gil_flow_py/: main.py
gil-flow-py/tests/: test_api.py  test_main.py
gil-flow-site/: next.config.ts  package-lock.json  package.json  tsconfig.json
gil-flow-site/publish/: 404.html  docs.html  docs.txt  index.html  index.txt
gil-flow-site/publish/docs/: ARCHITECTURE.html  ARCHITECTURE.txt  CONTEXT_SYSTEM.html  CONTEXT_SYSTEM.txt  DEV.html  DEV.txt  NODE_SPEC.html  NODE_SPEC.txt  OVERVIEW.html  OVERVIEW.txt  YAML_SPEC.html  YAML_SPEC.txt
gil-flow-site/publish/docs/nodes/: AITextGeneration.html  AITextGeneration.txt  ControlBranch.html  ControlBranch.txt  DataReadFile.html  DataReadFile.txt  GilConnectorOpenAI.html  GilConnectorOpenAI.txt  GilGenImage.html  GilGenImage.txt  (+8 more)
gil-flow-site/src/app/: layout.tsx  page.tsx
gil-flow-website/: package-lock.json  package.json
gil-node-data/gil_node_data/: read_file.py  transform.py
gil-node-openai/: pyproject.toml
gil-node-openai/gil_node_openai/: openai_connector.py  openai_image_generator.py
gil-node-text/gil_node_text/: openai_text_generation.py
gil-py/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
gil-py/gil/: yaml_parser.py
gil-py/gil-flow/: Dockerfile  README.md  pyproject.toml  requirements.txt
gil-py/gil-flow/charts/gil-flow-py/templates/: deployment.yaml  service.yaml
gil-py/gil-flow/gil_flow_py/: main.py
gil-py/gil-flow/tests/: test_api.py  test_main.py
gil-py/gil/cli/: main.py
gil-py/gil/core/: connection.py  context.py  node.py  port.py
gil-py/gil/workflow/: executor.py  node_factory.py  workflow.py
gil-py/gil_py/: __init__.py  yaml_parser.py
gil-py/gil_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gil-py/gil_py/cli/: __init__.py  __main__.py  main.py
gil-py/gil_py/connectors/: __init__.py  openai_connector.py
gil-py/gil_py/core/: __init__.py  connection.py  context.py  data_types.py  node.py  node_backup.py  node_clean.py  port.py
gil-py/gil_py/core/control/: branch.py
gil-py/gil_py/core/util/: log_message.py  set_variable.py
gil-py/gil_py/generators/: __init__.py  image_generator.py
gil-py/gil_py/nodes/: __init__.py  image_analysis.py  text_generation.py
gil-py/gil_py/workflow/: __init__.py  executor.py  executor_old.py  node_factory.py  workflow.py  yaml_parser.py
gil-py/nodes/gil-node-data/: pyproject.toml
gil-py/nodes/gil-node-openai/: pyproject.toml
gil-py/nodes/gil-node-openai/gil_node_openai/: openai_image_generator.py
gil-py/nodes/gil-node-text/: pyproject.toml
gil-py/nodes/gil-node-text/gil_node_text/: openai_text_generation.py
gil-py/tests/: context-test.yaml  generate-image.yaml  requirements.txt  smart-content-generator.yaml
gil-py/tests/workflows/: data_pipeline.yaml  dynamic_image_gen.yaml  parallel_flow.yaml
site-publish/: 404.html  docs.html  docs.txt  index.html  index.txt
site-publish/docs/: ARCHITECTURE.html  ARCHITECTURE.txt  CONTEXT_SYSTEM.html  CONTEXT_SYSTEM.txt  DEV.html  DEV.txt  NODE_SPEC.html  NODE_SPEC.txt  OVERVIEW.html  OVERVIEW.txt  YAML_SPEC.html  YAML_SPEC.txt
site-publish/docs/nodes/: AITextGeneration.html  AITextGeneration.txt  ControlBranch.html  ControlBranch.txt  DataReadFile.html  DataReadFile.txt  GilConnectorOpenAI.html  GilConnectorOpenAI.txt  GilGenImage.html  GilGenImage.txt  README.html  README.txt  TransformData.html  TransformData.txt  UtilLogMessage.html  UtilLogMessage.txt  UtilSetVariable.html  UtilSetVariable.txt
test-py/: .env.example  README.md  context-test.yaml  demo_workflow.py  demo_yaml.py  deploy_to_pypi.py  deployment_guide.py  example.py  requirements.txt  run_yaml_tests.bat  run_yaml_tests.sh  smart-content-generator.yaml  test-image-download.yaml  test_basic.py  test_cli.py  test_cli_direct.py  test_cli_simple.py  test_context.py  test_final.py  test_gil_py.py  test_image_generation.py  test_integrated.py  test_minimal.py  test_nodes.py  test_real_api.py  test_step_by_step.py  test_yaml_simple.py  test_yaml_workflows.py
test-py/context_results/: context-test_result.json  smart-content-generator_result.json
test-py/workflows/: conditional_flow.yaml  simple_image_gen.yaml
(+27 files in other folders)
