[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gil-py"
version = "0.1.0"
description = "Gil-Py: A Python workflow library for AI-powered node-based processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gil-Py Team", email = "gil-py@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "workflow", "openai", "image-generation", "automation"]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gil-team/gil-py"
Repository = "https://github.com/gil-team/gil-py"
Documentation = "https://github.com/gil-team/gil-py#readme"
Issues = "https://github.com/gil-team/gil-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gil_py*"]

[tool.setuptools.package-data]
gil_py = ["*.py"]
